alteracao do nome da aplicacao no heroku

--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ deployment:
   staging:
     branch: master
     heroku:
-      appname: staging-spring-tests
+      appname: luizhmp-staging-spring-tests
 
 general:
   artifacts:
